stuf/src/p6/tests/t024.err
Semantic error on line 6: No body was provided for animation block 'stretch' which was declared in a forward statement.
