stuf/src/p6/tests/t024.gpl
// NO BODY PROVIDED FOR FORWARD error
forward animation stretch(triangle);

triangle mister_trippy(animation_block=stretch);
triangle missus_trippy(animation_block=mister_trippy.animation_block);
